src/slurm-6194883.out
  File "/project/p_gnn001/code/tsp/atsp/src/train.py", line 110
    parser.add_argument("--num_runs", type=int, help="Max number of runs", default=1)                                                                                                                                                                                                                                                                                                                                           )
                                                                                                                                                                                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched ')'
